# velib-data-ingestion

./: .gitignore  .pre-commit-config.yaml  .python-version  .sqlfluff  .sqlfluffignore  LICENSE  Makefile  README.md  activate-dbt  pyproject.toml  requirements-dev.txt  requirements.txt
dags/: dag_velib_station_status_daily_pipeline.py  dag_velib_station_status_ingestion.py
dbt/velib_dbt/: dbt_project.yml
dbt/velib_dbt/models/: mart_station_status.sql  models.yml  sources.yml
dbt/velib_dbt/models/marts/: mart_station_status.sql
notebooks/: check_clean_completeness.ipynb  check_full_data.ipynb  check_raw_completeness.ipynb  compile_raw_to_clean.ipynb
scripts/: sync_station_status.sh  upload_to_s3.sh
src/: compile_yesterday_raw_files.py  enrich_velib_station_info.py  fetch_velib_data.py
terraform/: backend.tf  glue.tf  locals.tf  main.tf  providers.tf  s3.tf  variables.tf
tests/: test_alerting.py  test_telegram.py
utils/: alerting.py  telegram_notifier.py
